common/force-app/main/default/objects/BPAY__c/BPAY__c.object-meta.xml
<CustomObject>
    <label>BPAY</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>BPAY Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BPAY</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>