common/force-app/main/default/objects/BPAY__c/fields/Allocated_Account__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BPAY</relationshipLabel>
    <relationshipName>BPAY</relationshipName>
    <type>Lookup</type>
</CustomField>