common/force-app/main/default/objects/BPAY__c/fields/Biller_Code__c.field-meta.xml
<CustomField>
    <fullName>Biller_Code__c</fullName>
    <defaultValue>&apos;201913&apos;</defaultValue>
    <label>Biller Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>