common/force-app/main/default/objects/BPAY__c/fields/CRN__c.field-meta.xml
<CustomField>
    <fullName>CRN__c</fullName>
    <label>CRN</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>