common/force-app/main/default/objects/BPAY__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allocated_Account__c</columns>
    <columns>Biller_Code__c</columns>
    <columns>CRN__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
</ListView>