common/force-app/main/default/objects/BPAY__c/listViews/All_Inactive.listView-meta.xml
<ListView>
    <fullName>All_Inactive</fullName>
    <columns>NAME</columns>
    <columns>Allocated_Account__c</columns>
    <columns>Biller_Code__c</columns>
    <columns>CRN__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive</label>
</ListView>